# qr_generator

./: Pipfile  README.md  pyproject.toml
app/: app.py  util.py
package/: main.py  settings.py  util.py
tests/: test_util.py
