[tool.poetry]
name = "qr_generator"
version = "0.1.0"
description = "qr_generator"
authors = ["valerybriz <valerybriz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pillow = "^9.3.0"
qrcode = "^6.1"
python-dotenv = "^0.12.0"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
